improved rcs; added blockbot; fully recoded engine prediction

--- a/csgo-cheat.vcxproj
+++ b/csgo-cheat.vcxproj
@@ -50,6 +50,7 @@
     <LibraryPath>$(LibraryPath)</LibraryPath>
     <OutDir>.\output\debug\</OutDir>
     <IntDir>.\.vs\</IntDir>
+    <TargetName>0</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>.\output\release\</OutDir>
